--- a/pom.xml
+++ b/pom.xml
@@ -194,6 +194,13 @@
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-failsafe-plugin</artifactId>
 			<version>2.22.2</version>
+			<configuration>
+				<systemPropertyVariables>
+					<SPRING_DATASOURCE_URL>jdbc:mariadb://localhost/employees</SPRING_DATASOURCE_URL>
+					<SPRING_DATASOURCE_USERNAME>employees</SPRING_DATASOURCE_USERNAME>
+					<SPRING_DATASOURCE_PASSWORD>employees</SPRING_DATASOURCE_PASSWORD>
+				</systemPropertyVariables>
+			</configuration>
 			<executions>
 				<execution>
 					<goals>
